# android_cmake

example2/: CMakeLists copy.txt  CMakeLists.txt  build.sh  download.sh  entry.c  main.c  release.sh
example2/app/: CMakeLists.txt
example2/jni/: CMakeCache.txt  Makefile  cmake_install.cmake
example2/module/: CMakeLists.txt
example2/module/src/: a.c  b.c
example2/src/: main.c
progress/: CMakeLists.txt  download.sh  entry.c
progress/app/: CMakeLists.txt
progress/app/inc/: app.h
progress/app/src/: app.c
progress/module/: CMakeLists.txt
progress/module/inc/: a.h  b.h
progress/module/inc_pub/: module.h
