CMAKE_MINIMUM_REQUIRED(VERSION 2.9)
PROJECT(demo)
SET(BUILD_NAME ${PROJECT_NAME})
SET(CMAKE_CXX_FLAGS "-std=gnu++11 -Wall -fPIC -Wl,-Bsymbolic -lm -D__STDINT_LIMITS -D__STDINT_MACROS -D__ANDROID__ -DANDROID")


INCLUDE_DIRECTORIES(
                    ${CMAKE_CURRENT_SOURCE_DIR}/app/inc
                    ${CMAKE_CURRENT_SOURCE_DIR}/app/inc_pub
                    ${CMAKE_CURRENT_SOURCE_DIR}/module/inc
                    ${CMAKE_CURRENT_SOURCE_DIR}/module/inc_pub
                    )
SET(srcs ${CMAKE_CURRENT_SOURCE_DIR}/entry.c)


ADD_SUBDIRECTORY(app)
ADD_SUBDIRECTORY(module)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

ADD_EXECUTABLE(${BUILD_NAME} ${srcs})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} app module)

